# general-apis

./: pyproject.toml  requirements.txt  vercel.json
api/: index.py
templates/: ffc_index.html  index_stream.html  psw.html  psw_home.html
templates/dist2/: ffc-widget.min.js  ffc-widget.obf.js  psw-widget.min.js  psw-widget.obf.js
