[project]
name = "general-apis"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.13.5",
    "blinker==1.9.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "Flask==3.1.2",
    "flask-cors==6.0.1",
    "idna==3.10",
    "inflect==7.5.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "more-itertools==10.7.0",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.5",
    "six==1.17.0",
    "soupsieve==2.8",
    "typeguard==4.4.4",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.5.0",
    "Werkzeug==3.1.3"
]
